todos los componentes

--- a/actividad_clases/src/index.css
+++ b/actividad_clases/src/index.css
@@ -1,6 +1,7 @@
 body{ 
   width: 1920px;
-  height: 1080px; 
+  height: 1080px;
+  background-color: yellow;
 }
 
 header {
@@ -9,17 +10,30 @@ header {
   margin: 0 auto; 
   background-color: #8a8b88;
   display: flex;
-  justify-content: center; 
+  justify-content: space-between; 
   align-items: center;
-  padding: 0 20px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Añade sombra */
+  padding: 10px;
+  margin-left: 25px;
 }
 
 .container1 {
-  width: 100%;
   display: flex;
   justify-content: space-between; /* Espacia los elementos horizontalmente */
   align-items: center; /* Centra los elementos verticalmente */
+}
+
+.continer2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.imagenuno {
+  width: 400px;
+  height: 260px;
+  margin-left: 40%;
+  
 }
 
 .encabezados {
@@ -30,21 +44,9 @@ header {
   justify-content: center;
   align-items: center;
   border-radius: 8px;
-  margin-right: 60px;
+  margin-right: 50px;
 }
 
-.continer2 {
-  display: flex;
-  justify-content: center; /* Centra la imagen horizontalmente en su contenedor */
-  align-items: center; /* Centra la imagen verticalmente en su contenedor */
-}
-
-.container {
-  display: flex;
-  justify-content: space-between; /* Espacio entre el contenedor main y sections */
-  align-items: flex-start; /* Alinea la parte superior del contenedor main con las sections */
-  padding: 20px; /* Espaciado interno opcional */
-}
 
 .main {
   width: 945px;
@@ -53,6 +55,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 8px;
 }
 
 .main-img {
@@ -62,10 +65,19 @@ header {
   border-radius: 8px;
 }
 
+
+.container {
+  display: flex;
+  justify-content: space-between; /* Espacio entre el contenedor main y sections */
+  align-items: flex-start; /* Alinea la parte superior del contenedor main con las sections */
+  padding: 20px; /* Espaciado interno opcional */
+  
+}
+
 .sections-container {
   display: flex;
   flex-direction: column;
-  gap: 15px; /* Espacio entre las dos secciones */
+  gap: 5px; /* Espacio entre las dos secciones */
 }
 
 .sections {
@@ -88,4 +100,15 @@ header {
   align-items: center;
   border-radius: 8px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.articulos {
+  width: 646px;
+  height: 175px;
+  background-color: #6d6969ad;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  margin-right: 50px;
 }
